--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.14.1",
-    		"expo-linear-gradient": "~12.1.2"
+    "expo-linear-gradient": "~12.1.2",
+    "typescript": "^4.9.4",
+    "@types/react": "~18.0.27",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
