--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/core": "^6.2.1",
     "@react-navigation/drawer": "^6.4.1",
@@ -19,22 +20,22 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/routers": "^6.1.0",
     "@react-navigation/stack": "^6.2.1",
+    "@types/react": "~18.0.27",
+    "axios": "^1.6.7",
     "expo": "~48.0.4",
-    "expo-status-bar": "~1.4.2",
-    "expo-image": "~1.0.0",
     "expo-font": "~11.1.1",
+    "expo-image": "~1.0.0",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-status-bar": "~1.4.2",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "2.13.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.14.1",
-    "expo-linear-gradient": "~12.1.2",
-    "typescript": "^4.9.4",
-    "@types/react": "~18.0.27",
     "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
