--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.14.1",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.18.10",
     "typescript": "^4.9.4"
   },
